header auto format tag

--- a/header_index.html
+++ b/header_index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Golden</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header_style.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
-</head>
+	<meta charset="UTF-8">
+	<title>Golden</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/header_style.css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'></head>
 <body>
 
-<div class="wrap">
-    
-    <header class="header">
-        <div class="header-top">
-            <img class="logo" src="image/Golden_logo.png" alt="">    
-            <nav class="menu">
-                <a href="" class="menu-item">Home</a>
-                <a href="" class="menu-item">Services</a>
-                <a href="" class="menu-item">Portfolio</a>
-                <a href="" class="menu-item">About</a>
-                <a href="" class="menu-item">Contact</a>
-                <i class="icon-menu"></i>
-                <i class="icon-search"></i>
-            </nav>
-        </div>
-        <block1>
-            <p>Welcome To Our Studio!</p>
-        </block1>
-        <figure class="slide">
-            <img src="image/background_header.jpg" alt="">
-        </figure>
+	<div class="wrap">
 
-    </header>
+		<header class="header">
+			<div class="header-top">
+				<img class="logo" src="image/Golden_logo.png" alt="">
+				<nav class="menu">
+					<a href="" class="menu-item">Home</a>
+					<a href="" class="menu-item">Services</a>
+					<a href="" class="menu-item">Portfolio</a>
+					<a href="" class="menu-item">About</a>
+					<a href="" class="menu-item">Contact</a> <i class="icon-menu"></i> <i class="icon-search"></i>
+				</nav>
+			</div>
+			<block1>
+				<p>Welcome To Our Studio!</p>
+			</block1>
+			<figure class="slide">
+				<img src="image/background_header.jpg" alt=""></figure>
+
+		</header>
