First block is done

--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
-</head>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    </head>
 <body>
-<div class="new"> 
-<div class="wrap">
-    
-    <header class="header">
-        <div class="header-top">
-            <img class="logo" src="image/Golden_logo.png" alt="">    
-            <nav class="menu">
-                <a href="" class="menu-item">Home</a>
-                <a href="" class="menu-item">Services</a>
-                <a href="" class="menu-item">Portfolio</a>
-                <a href="" class="menu-item">About</a>
-                <a href="" class="menu-item">Contact</a>
-                <i class="icon-menu"></i>
-                <i class="icon-search"></i>
-            </nav>
+<div class="new">
+    <div class="wrap">
+         <header class="header">
+             <div class="header-top">
+                <img class="logo" src="image/Golden_logo.png" alt="">
+                <nav class="menu clearfix">
+                    <a href="" class="menu-item">Home</a>
+                    <a href="" class="menu-item">Services</a>
+                    <a href="" class="menu-item">Portfolio</a>
+                    <a href="" class="menu-item">About</a>
+                    <a href="" class="menu-item">Contact</a> <i class="icon-menu"></i> <i class="icon-search"></i>
+                </nav>
+            </div>
         </div>
-    </div>
-        <figure class="slide">
-            <img src="image/background_header.jpg" alt="">
-        </figure>
-    </header>
+        </div>
+            <figure class="slide">
+                <h2 class="welcome">Welcome To Our Studio!</h2>
+                <h1 class="NTMU">It’s nice to Meet you</h1>
+            </figure>
+        </header>
+        
