--- a/base.html
+++ b/base.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'></head>
-	
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'></head>
+
 <body>
 	<div class="new">
 		<div class="wrap">
@@ -26,7 +27,9 @@
 				<figure class="slide">
 					<h2 class="welcome">Welcome To Our Studio!</h2>
 					<h1 class="NTMU">It’s nice to Meet you</h1>
-					<button class="tell_me"><p>Tell Me More</p></button>
+					<button class="tell_me">
+						<p>Tell Me More</p>
+					</button>
 				</figure>
 			</header>
 		</div>
@@ -41,7 +44,7 @@
 					</li>
 					<h3 class="title-cws">E-Commerce</h3>
 					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in 	tincidunt.
+						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
 					</p>
 				</div>
 				<div class="web">
@@ -51,7 +54,7 @@
 					</li>
 					<h3 class="title-cws">Responsive Web</h3>
 					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in 	tincidunt.
+						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
 					</p>
 				</div>
 				<div class="security">
@@ -61,9 +64,47 @@
 					</li>
 					<h3 class="title-cws">Web Security</h3>
 					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in 	tincidunt.
+						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
 					</p>
 				</div>
+			</div>
+		</div>
+		<div class="gallery">
+			<div class="gallery_inside clearfix">
+				<h2 class="title-portfolio">Our portfolio</h2>
+				<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
+				<ul class="prtflio">
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/brand.png" alt="" class="prtflio_pic">
+						<h3 class="prtflio-title">Ebony & Ivory</h3>
+						<p class="prtflio_sub-title">Branding</p>
+					</li>
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/smart.png" alt="" class="prtflio_pic">
+						<h4 class="prtflio-title">Smart Stationary</h4>
+						<p class="prtflio_sub-title">Print Design</p>
+					</li>
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/poster.png" alt="" class="prtflio_pic">
+						<h3 class="prtflio-title">Clever Poster</h3>
+						<p class="prtflio_sub-title">Print Design</p>
+					</li>
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/music.png" alt="" class="prtflio_pic">
+						<h3 class="prtflio-title">Vinyl Record</h3>
+						<p class="prtflio_sub-title">Product Mock-Up</p>
+					</li>
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/design.png" alt="" class="prtflio_pic">
+						<h3 class="prtflio-title">Treehouse Template</h3>
+						<p class="prtflio_sub-title">Web Design</p>
+					</li>
+					<li class="prtflio_item">
+						<img src="../dream-team-23/image/logo.png" alt="" class="prtflio_pic">
+						<h3 class="prtflio-title">Burned Logo</h3>
+						<p class="prtflio_sub-title">Branding</p>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
