--- a/about.html
+++ b/about.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About US</title>
-	
-	
+	<title>About</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/about.css">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+</head>
 <body>
-	</body>
-	
+	<div class="about">
+		<h2 class="title-about">About us</h2>
+		<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
+		<div class="cont">
+			<div class="col-1">
+				<h3>July 2010
+					<p>Our Humble Beginnings</p>
+				</h3>
+				<p> Proin iaculis purus consequat sem cure 
+				digni ssim. Donec porttitora entum suscipit 
+				aenean rhoncus posuere odio in tincidunt. Proin 
+				iaculis purus consequat sem cure digni 
+				ssim. Donec porttitora entum suscipit.?
+				</p>
+				<img src="image/krug1.jpg">
+				
+			</div>
+			<div class="col-2">
+				<img src="http://placekitten.com/100/150">
+				<p>Proin iaculis purus consequat sem cure 
+				digni ssim. Donec porttitora entum suscipit 
+				aenean rhoncus posuere odio in tincidunt. Proin 
+				iaculis purus consequat sem cure digni 
+				ssim. Donec porttitora entum suscipit aenean 
+				rhoncus posuere odio in tincidunt.</p>
+		</div>
+	</div>
+	</div>
+</body>
 </html>
