--- a/team.html
+++ b/team.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Amazing team</title>
-	<link rel="stylesheet" href="css/team.css">
-</head>
+	<link rel="stylesheet" href="css/team.css"></head>
 <body>
 	<h3 class="team_title">our amazing team</h3>
 	<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
@@ -13,17 +12,14 @@
 			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
 			<h4 class="initials">Kimberly Thompson</h4>
 			<p class="initials_">Marketer</p>
-				<div class="ic">
+			<div class="ic">
 				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw">
-				</li>
+					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
 				<li class="icons">
-					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb">
-				</li>
+					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
 				<li class="icons">
-					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin">
-				</li>
-				</div>
+					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+			</div>
 		</div>
 		<div class="step1">
 			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
@@ -31,15 +27,12 @@
 			<p class="initials_">Coder</p>
 			<div class="ic">
 				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw">
-				</li>
+					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
 				<li class="icons">
-					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb">
-				</li>
+					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
 				<li class="icons">
-					<img src="../dream-team-23/pic/google.png" alt="" class="gog">
-				</li>
-				</div>
+					<img src="../dream-team-23/pic/google.png" alt="" class="gog"></li>
+			</div>
 		</div>
 		<div class="step1">
 			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
@@ -47,15 +40,15 @@
 			<p class="initials_">Graphic Designer</p>
 			<div class="ic_s">
 				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw">
-				</li>
+					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
 				<li class="icons">
-					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin">
-				</li>
-				</div>
+					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+			</div>
 		</div>
 	</div>
-	<h4 class="descr">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
-aenean rhoncus posuere odio in tincidunt proin iaculis.</h4>
+	<h4 class="descr">
+		Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
+		aenean rhoncus posuere odio in tincidunt proin iaculis.
+	</h4>
 </body>
 </html>
