--- a/about.html
+++ b/about.html
@@ -17,15 +17,14 @@
 				<h3>July 2010
 					<p>Our Humble Beginnings</p>
 				</h3>
-				<p> Proin iaculis purus consequat sem cure 
+				 Proin iaculis purus consequat sem cure 
 				digni ssim. Donec porttitora entum suscipit 
 				aenean rhoncus posuere odio in tincidunt. Proin 
 				iaculis purus consequat sem cure digni 
 				ssim. Donec porttitora entum suscipit.?
-				</p>
-				<img src="image/krug1.jpg">
 				
 			</div>
+			<img src="image/krug1.jpg">
 			<div class="col-2">
 				<img src="http://placekitten.com/100/150">
 				<p>Proin iaculis purus consequat sem cure 
