--- a/about.html
+++ b/about.html
@@ -17,23 +17,28 @@
 				<h3>July 2010
 					<p>Our Humble Beginnings</p>
 				</h3>
-				 Proin iaculis purus consequat sem cure 
+				<p class="txt-cont"> Proin iaculis purus consequat sem cure 
 				digni ssim. Donec porttitora entum suscipit 
 				aenean rhoncus posuere odio in tincidunt. Proin 
 				iaculis purus consequat sem cure digni 
-				ssim. Donec porttitora entum suscipit.?
-				
+				ssim. Donec porttitora entum suscipit.?</p>
 			</div>
-			<img src="image/krug1.jpg">
+				<img src="image/krug1.jpg">
+				<img src="image/krug2.jpg">
+				<img src="image/krug3.jpg">
+				<img src="image/krug4.jpg">
 			<div class="col-2">
-				<img src="http://placekitten.com/100/150">
-				<p>Proin iaculis purus consequat sem cure 
+				<h3>January 2011
+					<p>Facing Startup Battles</p>
+				</h3>
+				<p class="txt-cont"> Proin iaculis purus consequat sem cure 
 				digni ssim. Donec porttitora entum suscipit 
 				aenean rhoncus posuere odio in tincidunt. Proin 
 				iaculis purus consequat sem cure digni 
 				ssim. Donec porttitora entum suscipit aenean 
 				rhoncus posuere odio in tincidunt.</p>
 		</div>
+		
 	</div>
 	</div>
 </body>
