--- a/about.html
+++ b/about.html
@@ -12,22 +12,43 @@
 	<div class="about">
 		<h2 class="title-about">About us</h2>
 		<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
+
+	<ul class="timeline"></ul>
+		<li class="timeline-item"></li>
+			<li class="timeline-text"></li>
+			<p>Proin iaculis purus consequat sem cure 
+					digni ssim. Donec porttitora entum suscipit 
+					aenean rhoncus posuere odio in tincidunt. Proin 
+					iaculis purus consequat sem cure digni 
+					ssim. Donec porttitora entum suscipit.?
+			</p>
+<figure class="timeline_img">
+	<img src="image/krug1.jpg">
+	</figure>
+
+
+
+
+
+
+
+
 		<div class="cont">
-			<div class="col-1">
-				<h3>July 2010
-					<p>Our Humble Beginnings</p>
-				</h3>
-				<p class="txt-cont"> Proin iaculis purus consequat sem cure 
-				digni ssim. Donec porttitora entum suscipit 
-				aenean rhoncus posuere odio in tincidunt. Proin 
-				iaculis purus consequat sem cure digni 
-				ssim. Donec porttitora entum suscipit.?</p>
+			<div class="block-one">
+				<div class="col-1">
+					<h3>July 2010
+						<p>Our Humble Beginnings</p>
+					</h3>
+					<p class="txt-cont"> Proin iaculis purus consequat sem cure 
+					digni ssim. Donec porttitora entum suscipit 
+					aenean rhoncus posuere odio in tincidunt. Proin 
+					iaculis purus consequat sem cure digni 
+					ssim. Donec porttitora entum suscipit.?</p>
+				</div>
 			</div>
-				<img src="image/krug1.jpg">
-				<img src="image/krug2.jpg">
-				<img src="image/krug3.jpg">
-				<img src="image/krug4.jpg">
+			
 			<div class="col-2">
+			<img src="image/krug2.jpg">
 				<h3>January 2011
 					<p>Facing Startup Battles</p>
 				</h3>
@@ -37,9 +58,15 @@
 				iaculis purus consequat sem cure digni 
 				ssim. Donec porttitora entum suscipit aenean 
 				rhoncus posuere odio in tincidunt.</p>
-		</div>
-		
+			</div>
+				<img src="image/krug3.jpg">
+				<img src="image/krug4.jpg">
+	</div>
 	</div>
 	</div>
 </body>
 </html>
+
+
+
+	
