base.html is done

--- a/base.html
+++ b/base.html
@@ -8,8 +8,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-</head>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'></head>
 <body>
 	<div class="new clearfix">
 		<div class="wrap">
@@ -39,8 +38,7 @@
 			<div class="cont">
 				<div class="commerce">
 					<li class="background">
-						<img src="../dream-team-23/pic/icon-basket.png" alt="" class="pic_services-basket">
-					</li>
+						<img src="../dream-team-23/pic/icon-basket.png" alt="" class="pic_services-basket"></li>
 					<h3 class="title-cws">E-Commerce</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -48,8 +46,7 @@
 				</div>
 				<div class="web">
 					<li class="background">
-							<img src="../dream-team-23/pic/laptop.png" alt="" class="pic_services-laptop">
-					</li>
+						<img src="../dream-team-23/pic/laptop.png" alt="" class="pic_services-laptop"></li>
 					<h3 class="title-cws">Responsive Web</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -57,8 +54,7 @@
 				</div>
 				<div class="security">
 					<li class="background">
-							<img src="../dream-team-23/pic/lock.png" alt="" class="pic_services-lock">
-					</li>
+						<img src="../dream-team-23/pic/lock.png" alt="" class="pic_services-lock"></li>
 					<h3 class="title-cws">Web Security</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -107,101 +103,150 @@
 		<div class="container">
 			<h3 class="about_title">About Us</h3>
 			<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
-		<ul class="about">
-			<li class="about_item">
-				<div class="about_text">
-					<h3>July 2010</h3>
-					<h4>Our Humble Beginnings</h4>
-					<p>
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-					</p>
-				</div>
-				<figure class="about_img">
-					<img src="../dream-team-23/image/krug1.jpg" alt=""></figure>
-			</li>
-			<li class="about_item">
-				<div class="about_text">
-					<h3>January 2011</h3>
-					<h4>Facing Startup Battles</h4>
-					<p>
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-					</p>
-				</div>
-				<figure class="about_img">
-					<img src="../dream-team-23/image/krug2.jpg" alt=""></figure>
-			</li>
-			<li class="about_item">
-				<div class="about_text">
-					<h3>December 2012</h3>
-					<h4>Enter The Dark Days</h4>
-					<p>
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.
-					</p>
-				</div>
-				<figure class="about_img">
-					<img src="../dream-team-23/image/krug3.jpg" alt=""></figure>
-			</li>
-			<li class="about_item">
-				<div class="about_text">
-					<h3>february 2014</h3>
-					<h4>Our Triumph</h4>
-					<p>
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.
-					</p>
-				</div>
-				<figure class="about_img">
-					<img src="../dream-team-23/image/krug4.jpg" alt=""></figure>
-			</li>
-			<button class="about_button">
-				<h4 class="text_for_btn">Our Story Continues ...</h4>
-			</button>
-		</ul>
-	</div>
-	<div class="block clearfix">
+			<ul class="about">
+				<li class="about_item">
+					<div class="about_text">
+						<h3>July 2010</h3>
+						<h4>Our Humble Beginnings</h4>
+						<p>
+							Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
+						</p>
+					</div>
+					<figure class="about_img">
+						<img src="../dream-team-23/image/krug1.jpg" alt=""></figure>
+				</li>
+				<li class="about_item">
+					<div class="about_text">
+						<h3>January 2011</h3>
+						<h4>Facing Startup Battles</h4>
+						<p>
+							Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+						</p>
+					</div>
+					<figure class="about_img">
+						<img src="../dream-team-23/image/krug2.jpg" alt=""></figure>
+				</li>
+				<li class="about_item">
+					<div class="about_text">
+						<h3>December 2012</h3>
+						<h4>Enter The Dark Days</h4>
+						<p>
+							Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.
+						</p>
+					</div>
+					<figure class="about_img">
+						<img src="../dream-team-23/image/krug3.jpg" alt=""></figure>
+				</li>
+				<li class="about_item">
+					<div class="about_text">
+						<h3>february 2014</h3>
+						<h4>Our Triumph</h4>
+						<p>
+							Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.
+						</p>
+					</div>
+					<figure class="about_img">
+						<img src="../dream-team-23/image/krug4.jpg" alt=""></figure>
+				</li>
+				<button class="about_button">
+					<h4 class="text_for_btn">Our Story Continues ...</h4>
+				</button>
+			</ul>
+		</div>
+		<div class="block">
 			<h3 class="title_team">our amazing team</h3>
 			<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
-		<div class="step1">
-			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
-			<h4 class="initials">Kimberly Thompson</h4>
-			<p class="initials_">Marketer</p>
-			<div class="ic">
-				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
-				<li class="icons">
-					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
-				<li class="icons">
-					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+			<div class="contain">
+				<div class="step1">
+					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<h4 class="initials">Kimberly Thompson</h4>
+					<p class="initials_">Marketer</p>
+					<div class="ic">
+						<li class="icons">
+							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+						<li class="icons">
+							<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
+						<li class="icons">
+							<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+					</div>
+				</div>
+				<div class="step1">
+					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<h4 class="initials">Rico Massimo</h4>
+					<p class="initials_">Coder</p>
+					<div class="ic">
+						<li class="icons">
+							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+						<li class="icons">
+							<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
+						<li class="icons">
+							<img src="../dream-team-23/pic/google.png" alt="" class="gog"></li>
+					</div>
+				</div>
+				<div class="step1">
+					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<h4 class="initials">Uku Mason</h4>
+					<p class="initials_">Graphic Designer</p>
+					<div class="ic_s">
+						<li class="icons">
+							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+						<li class="icons">
+							<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+					</div>
+				</div>
+				<h4 class="descr">
+					Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
+					aenean rhoncus posuere odio in tincidunt proin iaculis.
+				</h4>
 			</div>
 		</div>
-		<div class="step1">
-			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
-			<h4 class="initials">Rico Massimo</h4>
-			<p class="initials_">Coder</p>
-			<div class="ic">
-				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
-				<li class="icons">
-					<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
-				<li class="icons">
-					<img src="../dream-team-23/pic/google.png" alt="" class="gog"></li>
+		<div class="footer_head">
+			<ul class="media">
+				<li class="media_img">
+					<img src="../dream-team-23/image/logo1.jpg" alt="" class="correct"></li>
+				<li class="media_img">
+					<img src="../dream-team-23/image/logo2.jpg" alt=""></li>
+				<li class="media_img">
+					<img src="../dream-team-23/image/logo3.jpg" alt=""></li>
+				<li class="media_img">
+					<img src="../dream-team-23/image/logo4.jpg" alt=""></li>
+			</ul>
+		</div>
+		<div class="footer_content">
+			<div class="form_content clearfix">
+				<h3 class="title_footer">Contact us</h3>
+				<h4 class="sub-title">Proin iaculis purus consequat sem cure.</h4>
+				<form class="form_input">
+					<input type="text" name="name" placeholder="your name*" class="form1"/>
+					<input type="text" name="name" placeholder="your e-mail*" class="form1"/>
+					<input type="text" name="name" placeholder="subject" class="form1"/>
+				</form>
+				<form class="footer_textarea">
+					<textarea name="name" placeholder="Your message*" cols="30" rows="9" class="form2"></textarea>
+				</form>
+			</div>
+			<button class="tell_me">
+				<p>Send Message</p>
+			</button>
+		</div>
+		<div class="section_footer">
+			<p class="text">
+				© Copyright 2014 FreebiesXpress.com
+			</p>
+			<div class="social">
+				<li class="ic-f">
+					<img src="../dream-team-23/pic/twitter-w.png" alt="" class="tw-w">
+				</li>
+				<li class="ic-f">
+					<img src="../dream-team-23/pic/facebook-w.png" alt="" class="fb-w">
+				</li>
+				<li class="ic-f">
+					<img src="../dream-team-23/pic/pinterest-w.png" alt="" class="pin-w">
+				</li>
+				<li class="ic-f">
+					<img src="../dream-team-23/pic/google-w.png" alt="" class="gog-w">
+				</li>
 			</div>
 		</div>
-		<div class="step1">
-			<img src="../dream-team-23/image/container.jpg" alt="" class="black">
-			<h4 class="initials">Uku Mason</h4>
-			<p class="initials_">Graphic Designer</p>
-			<div class="ic_s">
-				<li class="icons">
-					<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
-				<li class="icons">
-					<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
-			</div>
-		</div>
-	</div>
-	<h4 class="descr">
-		Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
-		aenean rhoncus posuere odio in tincidunt proin iaculis.
-	</h4>
-	</div>
 </body>
 </html>
