--- a/base.html
+++ b/base.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -41,7 +41,7 @@
 			<div class="cont">
 				<div class="commerce">
 					<li class="background">
-						<img src="../dream-team-23/pic/icon-basket.png" alt="" class="pic_services-basket"></li>
+						<img src="pic/icon-basket.png" alt="" class="pic_services-basket"></li>
 					<h3 class="title-cws">E-Commerce</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -49,7 +49,7 @@
 				</div>
 				<div class="web">
 					<li class="background">
-						<img src="../dream-team-23/pic/laptop.png" alt="" class="pic_services-laptop"></li>
+						<img src="pic/laptop.png" alt="" class="pic_services-laptop"></li>
 					<h3 class="title-cws">Responsive Web</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -57,7 +57,7 @@
 				</div>
 				<div class="security">
 					<li class="background">
-						<img src="../dream-team-23/pic/lock.png" alt="" class="pic_services-lock"></li>
+						<img src="pic/lock.png" alt="" class="pic_services-lock"></li>
 					<h3 class="title-cws">Web Security</h3>
 					<p class="description">
 						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -71,32 +71,32 @@
 				<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
 				<ul class="prtflio clearfix">
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/brand.png" alt="" class="prtflio_pic">
+						<img src="image/brand.png" alt="" class="prtflio_pic">
 						<h3 class="prtflio-title">Ebony & Ivory</h3>
 						<p class="prtflio_sub-title">Branding</p>
 					</li>
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/smart.png" alt="" class="prtflio_pic">
+						<img src="image/smart.png" alt="" class="prtflio_pic">
 						<h4 class="prtflio-title">Smart Stationary</h4>
 						<p class="prtflio_sub-title">Print Design</p>
 					</li>
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/poster.png" alt="" class="prtflio_pic">
+						<img src="image/poster.png" alt="" class="prtflio_pic">
 						<h3 class="prtflio-title">Clever Poster</h3>
 						<p class="prtflio_sub-title">Print Design</p>
 					</li>
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/music.png" alt="" class="prtflio_pic">
+						<img src="image/music.png" alt="" class="prtflio_pic">
 						<h3 class="prtflio-title">Vinyl Record</h3>
 						<p class="prtflio_sub-title">Product Mock-Up</p>
 					</li>
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/design.png" alt="" class="prtflio_pic">
+						<img src="image/design.png" alt="" class="prtflio_pic">
 						<h3 class="prtflio-title">Treehouse Template</h3>
 						<p class="prtflio_sub-title">Web Design</p>
 					</li>
 					<li class="prtflio_item">
-						<img src="../dream-team-23/image/logo.png" alt="" class="prtflio_pic">
+						<img src="image/logo.png" alt="" class="prtflio_pic">
 						<h3 class="prtflio-title">Burned Logo</h3>
 						<p class="prtflio_sub-title">Branding</p>
 					</li>
@@ -116,7 +116,7 @@
 						</p>
 					</div>
 					<figure class="about_img">
-						<img src="../dream-team-23/image/krug1.jpg" alt=""></figure>
+						<img src="image/krug1.jpg" alt=""></figure>
 				</li>
 				<li class="about_item">
 					<div class="about_text">
@@ -127,7 +127,7 @@
 						</p>
 					</div>
 					<figure class="about_img">
-						<img src="../dream-team-23/image/krug2.jpg" alt=""></figure>
+						<img src="image/krug2.jpg" alt=""></figure>
 				</li>
 				<li class="about_item">
 					<div class="about_text">
@@ -138,7 +138,7 @@
 						</p>
 					</div>
 					<figure class="about_img">
-						<img src="../dream-team-23/image/krug3.jpg" alt=""></figure>
+						<img src="image/krug3.jpg" alt=""></figure>
 				</li>
 				<li class="about_item">
 					<div class="about_text">
@@ -149,7 +149,7 @@
 						</p>
 					</div>
 					<figure class="about_img">
-						<img src="../dream-team-23/image/krug4.jpg" alt=""></figure>
+						<img src="image/krug4.jpg" alt=""></figure>
 				</li>
 				<button class="about_button">
 					<h4 class="text_for_btn">Our Story Continues ...</h4>
@@ -161,40 +161,40 @@
 			<p class="sub-title">Proin iaculis purus consequat sem cure.</p>
 			<div class="contain">
 				<div class="step1">
-					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<img src="image/container.jpg" alt="" class="black">
 					<h4 class="initials">Kimberly Thompson</h4>
 					<p class="initials_">Marketer</p>
 					<div class="ic">
 						<li class="icons">
-							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+							<img src="pic/twitter.png" alt="" class="tw"></li>
 						<li class="icons">
-							<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
+							<img src="pic/facebook.png" alt="" class="fb"></li>
 						<li class="icons">
-							<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+							<img src="pic/pinterest.png" alt="" class="pin"></li>
 					</div>
 				</div>
 				<div class="step1">
-					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<img src="image/container.jpg" alt="" class="black">
 					<h4 class="initials">Rico Massimo</h4>
 					<p class="initials_">Coder</p>
 					<div class="ic">
 						<li class="icons">
-							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+							<img src="pic/twitter.png" alt="" class="tw"></li>
 						<li class="icons">
-							<img src="../dream-team-23/pic/facebook.png" alt="" class="fb"></li>
+							<img src="pic/facebook.png" alt="" class="fb"></li>
 						<li class="icons">
-							<img src="../dream-team-23/pic/google.png" alt="" class="gog"></li>
+							<img src="pic/google.png" alt="" class="gog"></li>
 					</div>
 				</div>
 				<div class="step1">
-					<img src="../dream-team-23/image/container.jpg" alt="" class="black">
+					<img src="image/container.jpg" alt="" class="black">
 					<h4 class="initials">Uku Mason</h4>
 					<p class="initials_">Graphic Designer</p>
 					<div class="ic_s">
 						<li class="icons">
-							<img src="../dream-team-23/pic/twitter.png" alt="" class="tw"></li>
+							<img src="pic/twitter.png" alt="" class="tw"></li>
 						<li class="icons">
-							<img src="../dream-team-23/pic/pinterest.png" alt="" class="pin"></li>
+							<img src="pic/pinterest.png" alt="" class="pin"></li>
 					</div>
 				</div>
 				<h4 class="descr">
@@ -206,13 +206,13 @@
 		<div class="footer_head">
 			<ul class="media">
 				<li class="media_img">
-					<img src="../dream-team-23/image/logo1.jpg" alt="" class="correct"></li>
+					<img src="image/logo1.jpg" alt="" class="correct"></li>
 				<li class="media_img">
-					<img src="../dream-team-23/image/logo2.jpg" alt=""></li>
+					<img src="image/logo2.jpg" alt=""></li>
 				<li class="media_img">
-					<img src="../dream-team-23/image/logo3.jpg" alt=""></li>
+					<img src="image/logo3.jpg" alt=""></li>
 				<li class="media_img">
-					<img src="../dream-team-23/image/logo4.jpg" alt=""></li>
+					<img src="image/logo4.jpg" alt=""></li>
 			</ul>
 		</div>
 		<div class="footer_content">
@@ -238,16 +238,16 @@
 			</p>
 			<div class="social">
 				<li class="ic-f">
-					<img src="../dream-team-23/pic/twitter-w.png" alt="" class="tw-w">
+					<img src="pic/twitter-w.png" alt="" class="tw-w">
 				</li>
 				<li class="ic-f">
-					<img src="../dream-team-23/pic/facebook-w.png" alt="" class="fb-w">
+					<img src="pic/facebook-w.png" alt="" class="fb-w">
 				</li>
 				<li class="ic-f">
-					<img src="../dream-team-23/pic/pinterest-w.png" alt="" class="pin-w">
+					<img src="pic/pinterest-w.png" alt="" class="pin-w">
 				</li>
 				<li class="ic-f">
-					<img src="../dream-team-23/pic/google-w.png" alt="" class="gog-w">
+					<img src="pic/google-w.png" alt="" class="gog-w">
 				</li>
 			</div>
 		</div>
