--- a/base.html
+++ b/base.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" media="screen and (max-width:960px)" href="">
 		</head>
 <body>
-	<div class="new clearfix">
+	<div class="new">
 		<div class="wrap">
 			<header class="header">
 				<div class="header-top">
@@ -27,8 +27,10 @@
 					</nav>
 				</div>
 				<figure class="slide">
+				<section class="title_inside_slide">
 					<h2 class="welcome">Welcome To Our Studio!</h2>
 					<h1 class="NTMU">It’s nice to Meet you</h1>
+				</section>
 					<button class="tell_me">
 						<p>Tell Me More</p>
 					</button>
@@ -43,25 +45,19 @@
 					<li class="background">
 						<img src="pic/icon-basket.png" alt="" class="pic_services-basket"></li>
 					<h3 class="title-cws">E-Commerce</h3>
-					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-					</p>
+					<p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 				<div class="web">
 					<li class="background">
 						<img src="pic/laptop.png" alt="" class="pic_services-laptop"></li>
 					<h3 class="title-cws">Responsive Web</h3>
-					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-					</p>
+					<p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 				<div class="security">
 					<li class="background">
 						<img src="pic/lock.png" alt="" class="pic_services-lock"></li>
 					<h3 class="title-cws">Web Security</h3>
-					<p class="description">
-						Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-					</p>
+					<p class="description">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 			</div>
 		</div>
